oriterm_core/tests/snapshots/vttest__80x24_02_screen_06.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
1234567890123456789012345678901234567890123456789012345678901234567890123456789                                                     
                                                                                                                                    
  This is 80 column mode, dark background.                                                                                          
   This is 80 column mode, dark background.                                                                                         
    This is 80 column mode, dark background.                                                                                        
     This is 80 column mode, dark background.                                                                                       
      This is 80 column mode, dark background.                                                                                      
       This is 80 column mode, dark background.                                                                                     
        This is 80 column mode, dark background.                                                                                    
         This is 80 column mode, dark background.                                                                                   
          This is 80 column mode, dark background.                                                                                  
           This is 80 column mode, dark background.                                                                                 
            This is 80 column mode, dark background.                                                                                
             This is 80 column mode, dark background.                                                                               
              This is 80 column mode, dark background.                                                                              
               This is 80 column mode, dark background.                                                                             
                This is 80 column mode, dark background.                                                                            
                 This is 80 column mode, dark background.                                                                           
                  This is 80 column mode, dark background.                                                                          
                   This is 80 column mode, dark background.Push <RETURN>
